--- a/package.json
+++ b/package.json
@@ -15,33 +15,66 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.14",
+    "@expo/config-plugins": "^8.0.8",
+    "@expo/vector-icons": "^14.0.3",
+    "@firebase/auth-types": "^0.12.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/auth": "^20.1.0",
+    "@react-native-firebase/storage": "^20.1.0",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.0",
+    "@types/react-navigation": "^3.4.0",
+    "@types/react-router-dom": "^5.3.3",
+    "expo": "~51.0.34",
+    "expo-application": "~5.9.1",
+    "expo-asset": "^10.0.10",
+    "expo-auth-session": "~5.5.2",
+    "expo-av": "~14.0.7",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.27",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
+    "expo-gl": "^14.0.2",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
-    "expo-splash-screen": "~0.27.5",
+    "expo-media-library": "~16.0.5",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
+    "expo-video": "^1.2.3",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.3",
+    "glob": "^11.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-dom": "^18.2.0",
+    "react-native": "0.74.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-navigation": "^5.0.0",
+    "react-router-dom": "^6.24.1",
+    "react-native-view-shot": "3.8.0",
+    "@stripe/stripe-react-native": "0.37.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.8",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-dom": "~18.2.25",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
